[gd_scene load_steps=10 format=2]

[ext_resource path="res://godot/images/widefind-logo.svg" type="Texture" id=1]
[ext_resource path="res://godot/scripts/addNewRule.gd" type="Script" id=2]
[ext_resource path="res://godot/TTF/AtkinsonHyperlegible-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://godot/scene/HBoxForRules.tscn" type="PackedScene" id=4]
[ext_resource path="res://godot/scene/HomeButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="LineEdit" parent="."]
margin_left = 30.0
margin_top = 23.0
margin_right = 390.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "[Name Of Ruleset]"

[node name="ScrollContainerINPUT" type="ScrollContainer" parent="."]
margin_left = 40.0
margin_top = 131.0
margin_right = 347.0
margin_bottom = 318.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerINPUT"]

[node name="HBoxContainer" parent="ScrollContainerINPUT/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_right = 267.0
margin_bottom = 32.0

[node name="ScrollContainerOUTPUT_PREDEF" type="ScrollContainer" parent="."]
margin_left = 361.0
margin_top = 130.0
margin_right = 651.0
margin_bottom = 321.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerOUTPUT_PREDEF"]

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainerOUTPUT_PREDEF/VBoxContainer"]
visible = false
margin_right = 264.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="ScrollContainerOUTPUT_PREDEF/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ScrollContainerOUTPUT_PREDEF/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 9.0
margin_right = 184.0
margin_bottom = 30.0
text = "[THING]_[ID]_[STATE]"

[node name="CheckButton2" type="CheckButton" parent="ScrollContainerOUTPUT_PREDEF/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 264.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainerOUTPUT_GEN" type="ScrollContainer" parent="."]
margin_left = 663.0
margin_top = 135.0
margin_right = 953.0
margin_bottom = 326.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainerOUTPUT_GEN"]

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainerOUTPUT_GEN/VBoxContainer"]
visible = false
margin_right = 264.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="ScrollContainerOUTPUT_GEN/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="ScrollContainerOUTPUT_GEN/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 9.0
margin_right = 184.0
margin_bottom = 30.0
text = "[THING]_[ID]_[STATE]"

[node name="CheckButton2" type="CheckButton" parent="ScrollContainerOUTPUT_GEN/VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 264.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 474.801
margin_top = 16.8369
margin_right = 777.801
margin_bottom = 69.8369
text = "Choose Ruleset"

[node name="INPUT" type="Button" parent="."]
margin_left = 37.0
margin_top = 95.0
margin_right = 337.0
margin_bottom = 122.0
text = "INPUT"

[node name="OUTPUT_PREDEF" type="Button" parent="."]
margin_left = 360.0
margin_top = 95.0
margin_right = 637.0
margin_bottom = 122.0
text = "OUTPUT PRE-DEF"

[node name="OUTPUT_GEN" type="Button" parent="."]
margin_left = 661.0
margin_top = 97.0
margin_right = 938.0
margin_bottom = 124.0
text = "OUTPUT GENERAL"

[node name="ButtonKill" type="Button" parent="."]
visible = false
margin_left = 97.659
margin_top = 431.577
margin_right = 250.659
margin_bottom = 498.577
text = "Kill"

[node name="ButtonSAVE" type="Button" parent="."]
margin_left = 421.632
margin_top = 436.964
margin_right = 599.632
margin_bottom = 504.964
text = "SAVE"

[node name="HomeButton" parent="." instance=ExtResource( 5 )]

[node name="widefind-logo" type="Sprite" parent="."]
visible = false
position = Vector2( 259.006, 523.197 )
scale = Vector2( 0.479062, 0.471399 )
texture = ExtResource( 1 )

[node name="Saved" type="WindowDialog" parent="."]
margin_left = 791.0
margin_top = 65.0
margin_right = 1020.0
margin_bottom = 215.0

[node name="RichTextLabel" type="RichTextLabel" parent="Saved"]
margin_right = 231.0
margin_bottom = 151.0
custom_fonts/normal_font = SubResource( 4 )
text = "Things have been saved"

[node name="NotSaved" type="WindowDialog" parent="."]
margin_left = 68.0
margin_top = 364.0
margin_right = 352.0
margin_bottom = 499.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotSaved"]
margin_right = 284.0
margin_bottom = 137.0
custom_fonts/normal_font = SubResource( 4 )
text = "Things where NOT saved"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 669.0
margin_top = 395.0
margin_right = 985.0
margin_bottom = 503.0

[node name="Button" type="Button" parent="LineEdit"]
margin_top = -28.0
margin_right = 134.0
margin_bottom = -1.0
text = "OutPut Argument for General"

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="ButtonKill" to="." method="_on_ButtonKill_pressed"]
[connection signal="pressed" from="ButtonSAVE" to="." method="_on_ButtonSAVE_pressed"]
